--- a/SettingsGoogle/res/xml/security_lockscreen_settings.xml
+++ b/SettingsGoogle/res/xml/security_lockscreen_settings.xml
@@ -92,6 +92,12 @@
             settings:userRestriction="no_ambient_display" />
 
         <Preference
+            android:key="always_on_display_schedule"
+            android:title="@string/always_on_display_schedule_title"
+            android:fragment="com.android.settings.display.AODSchedule"
+            settings:controller="com.android.settings.display.AODSchedulePreferenceController" />
+
+        <Preference
             android:fragment="com.android.settings.gestures.TapScreenGestureSettings"
             android:key="ambient_display_tap"
             android:title="@string/ambient_display_tap_screen_title"
