SettingsGoogle: add Magic preferences

--- a/SettingsGoogle/res/xml/system_dashboard_fragment.xml
+++ b/SettingsGoogle/res/xml/system_dashboard_fragment.xml
@@ -44,6 +44,14 @@
         android:order="-240"
         android:title="@string/date_and_time"
         settings:controller="com.android.settings.datetime.DateTimePreferenceController" />
+        
+    <!-- Magic Settings -->
+    <Preference
+        android:key="magic_settings"
+        android:title="@string/magic_title"
+        android:icon="@drawable/ic_magic_settings"
+        android:order="-247"
+        android:fragment="com.android.settings.custom.magic.MagicSettings" />
 
     <com.google.android.settings.aware.AwareSettingsDialogPreference
         android:icon="@drawable/ic_aware"
